--- a/art.html
+++ b/art.html
@@ -196,7 +196,7 @@
       <div></div><div></div><div></div>
     </div>
     <nav class="site-nav" id="site-nav">
-      <a href="fiction.html">Issues</a>
+      <a href="issues.html">Issues</a>
       <a href="stories.html">Stories</a>
       <a href="art.html">Art</a>
       <a href="about.html">About</a>
