--- a/about.html
+++ b/about.html
@@ -42,7 +42,7 @@
       <div></div><div></div><div></div>
     </div>
     <nav class="site-nav" id="site-nav">
-      <a href="fiction.html">Issues</a>
+      <a href="issues.html">Issues</a>
       <a href="stories.html">Stories</a>
       <a href="art.html">Art</a>
       <a href="about.html">About</a>
@@ -74,7 +74,7 @@
       </div>
       <div class="footer-column">
         <h4>Read</h4>
-        <p><a href="https://bowliopia.github.io/burnline/fiction.html">Issue Library</a></p>
+        <p><a href="https://bowliopia.github.io/burnline/issues.html">Issue Library</a></p>
         <p><a href="https://bowliopia.github.io/burnline/stories.html">Featured Stories</a></p>
         <p><a href="https://bowliopia.github.io/burnline/staffpicks.html">Staff Picks</a></p>
       </div>
