--- a/submit.html
+++ b/submit.html
@@ -104,18 +104,18 @@
     /* Stack tabs on narrow screens */
 @media (max-width: 520px) {
   .tablist {
-    flex-direction: column;      /* stack */
+    flex-direction: column;  
     align-items: stretch;
-    justify-content: flex-start; /* override center */
+    justify-content: flex-start;
     gap: 0.6rem;
-    border-bottom: 0;            /* no underline when vertical */
+    border-bottom: 0;        
     padding-bottom: 0;
     overflow-x: visible;
   }
   .tab {
     width: 100%;
     text-align: center;
-    border-radius: 12px;         /* softer when full-width */
+    border-radius: 12px;      
     padding: 0.7rem 1rem;
     font-size: 1rem;
   }
@@ -144,7 +144,7 @@
       <div></div>
     </div>
     <nav class="site-nav" id="site-nav">
-      <a href="fiction.html">Issues</a>
+      <a href="issues.html">Issues</a>
       <a href="stories.html">Stories</a>
       <a href="art.html">Art</a>
       <a href="https://bowliopia.github.io/burnline/about.html">About</a>
@@ -243,7 +243,7 @@
 
       <div class="footer-column">
         <h4>Read</h4>
-        <p><a href="https://bowliopia.github.io/burnline/fiction.html">Issue Library</a></p>
+        <p><a href="https://bowliopia.github.io/burnline/issues.html">Issue Library</a></p>
         <p><a href="https://bowliopia.github.io/burnline/stories.html">Featured Stories</a></p>
         <p><a href="https://bowliopia.github.io/burnline/staffpicks.html">Staff Picks</a></p>
       </div>
