--- a/stories/template.html
+++ b/stories/template.html
@@ -122,7 +122,7 @@
       <div></div><div></div><div></div>
     </div>
     <nav class="site-nav" id="site-nav">
-      <a href="../fiction.html">Issues</a>
+      <a href="../issues.html">Issues</a>
       <a href="../stories.html">Stories</a>
       <a href="../art.html">Art</a>
       <a href="../about.html">About</a>
@@ -135,7 +135,7 @@
     <div class="hero-inner hero-row">
       <div class="hero-text">
         <div class="nav-breadcrumb">
-          <a href="../fiction.html" class="gradient-pink-text">Fiction</a> / <span>[Story Title]</span>
+          <a href="../issues.html" class="gradient-pink-text">Fiction</a> / <span>[Story Title]</span>
         </div>
         <h1 class="gradient-heading">[Story Title]</h1>
         <p style="color:var(--text-muted);margin:0 0 1rem 0;">[Optional subtitle or teaser sentence goes here.]</p>
@@ -217,7 +217,7 @@
       </div>
       <div class="footer-column">
         <h4>Read</h4>
-        <p><a href="https://bowliopia.github.io/burnline/fiction.html">Issue Library</a></p>
+        <p><a href="https://bowliopia.github.io/burnline/issues.html">Issue Library</a></p>
         <p><a href="https://bowliopia.github.io/burnline/stories.html">Featured Stories</a></p>
         <p><a href="https://bowliopia.github.io/burnline/staffpicks.html">Staff Picks</a></p>
       </div>
