--- a/stories.html
+++ b/stories.html
@@ -128,8 +128,9 @@
       <span>BURNLINE</span>
     </a>
 
-    <button class="hamburger" id="hamburger" aria-controls="site-nav" aria-expanded="false" aria-label="Toggle menu">
-      <div></div><div></div><div></div>
+    <!-- Use spans (matches global CSS used on other pages) -->
+    <button class="hamburger" id="hamburger" type="button" aria-controls="site-nav" aria-expanded="false" aria-label="Toggle menu">
+      <span></span><span></span><span></span>
     </button>
 
     <nav class="site-nav" id="site-nav">
