--- a/stories.html
+++ b/stories.html
@@ -117,6 +117,12 @@
       padding: 1rem 0 0.5rem;
     }
     .is-hidden { display: none !important; }
+
+    /* Optional: only if needed */
+.site-header .hamburger { background: none; border: 0; padding: 0; }
+.site-header .hamburger span { display:block; width:24px; height:3px; border-radius:2px; background: var(--ink-dark); }
+.site-header .hamburger span + span { margin-top:5px; }
+
   </style>
 </head>
 <body>
