--- a/staffpicks.html
+++ b/staffpicks.html
@@ -424,7 +424,7 @@
     <div class="overlay-content">
       <p>In Richard Morgan’s version of the future, people’s consciousness can be transferred into new bodies (or “sleeves”), making death escapable for the lucky few who are rich enough to afford the process. Takeshi Kovacs, a former elite soldier turned private investigator, is hired to investigate the murder of one such person.</p>
       <p><strong>Why I like it:</strong> Altered Carbon is full of tropes in the genre, but its core concept, the idea of “resleeving” your mind into a new body to escape death, is executed so well that the whole consciousness transfer thing feels original. The gritty main character isn’t wholly original and the bad guy isn’t the best I’ve ever read, but the world and the execution of ideas are excellent. This is one of the most successful entities in the cyberpunk subgenre for a good reason.</p>
-      <p><em>Please don't buy this from an online megaretailer. Instead, buy it from an indie or neighborhood store with a good sci-fi section.</em></p>
+      <p><em>Please don't buy this from an online megaretailer. Instead, buy it from an independent bookstore with a good sci-fi section.</em></p>
     </div>
   </div>
 </div>
@@ -438,7 +438,7 @@
       <p>Blame! follows Killy, a silent wanderer armed with an impossibly powerful gun, as he searches for humans with the Net Terminal Gene across a vast megastructure. Dialogue is sparse, characters are fleeting, and the environment is the main mode of storytelling, where bleak structures stretch on endlessly.</p>
       <p><strong>Why I like it:</strong> Blame! is one of those works where you’re given very little, but that feeds into your intrigue while you flip through pages showing you vast, lifeless expanses. That lack of explanation becomes the point: the world is too big, too far gone, to be grasped.</p>
       <p>Cyberpunk is often about cityscapes and tech gone wrong, but Blame! shows what would happen if the dystopian city evolved and evolved and evolved, then outlived people, then kept evolving into nothing. I’m not a huge fan of manga nor am I very well read in that space, but Blame! really stuck with me.</p>
-      <p><em>Please don't buy this from an online megaretailer. Instead, buy it from an indie or neighborhood store with a good sci-fi section.</em></p>
+      <p><em>Please don't buy this from an online megaretailer. Instead, buy it from an independent bookstore with a good sci-fi section.</em></p>
     </div>
   </div>
 </div>
@@ -451,7 +451,7 @@
     <div class="overlay-content">
       <p>This short story collection by William Gibson gathers some of his earliest and most defining works. The title story, co-written with Bruce Sterling, brings in the genre-defining tropes of cyberpunk: console cowboys, ice-breaking, and big-city crime at night. That story alone would deserve to be featured on this page, but other stories in the collection like “Johnny Mnemonic” and “New Rose Hotel” further sketch the outline of what would later become full-fledged cyberpunk.</p>
       <p><strong>Why I like it:</strong> Burning Chrome is pure cyberpunk before the genre knew exactly what it was. Not every story is perfect, but the good ones are staples in the subgenre. The title story alone captures everything that makes Gibson great: it gets to the point without an ounce of unnecessary exposition, the tech is cool in the Gibson way, and some guys are doing some crime. If Neuromancer is the perfect finished product, Burning Chrome is the early concept work that set up the foundation for the whole thing.</p>
-      <p><em>Please don't buy this from an online megaretailer. Instead, buy it from an indie or neighborhood store with a good sci-fi section.</em></p>
+      <p><em>Please don't buy this from an online megaretailer. Instead, buy it from an independent bookstore with a good sci-fi section.</em></p>
     </div>
   </div>
 </div>
@@ -466,7 +466,7 @@
       <p><strong>Why I like it:</strong> Count Zero is often overshadowed by Neuromancer, perhaps because it’s a bit less on-the-rails. Neuromancer tells a singularly linear story, while Count Zero gives multiple views of a time and place. As a result, Neuromancer’s follow-up feels undeniably different, but I think that’s its strength.</p>
       <p>By splitting the narrative into multiple perspectives, Gibson opened up the world and made it feel less like Case’s story and more like an ecosystem of interconnected players. The Haitian-inspired AI is one of the coolest cyberpunk concepts I’ve ever read, and it gives the book a mystical edge without losing its grounded, gritty feeling. Part one of the Sprawl gave a very clear definition of what cyberpunk should look like moving forward. Then part two (Count Zero), asked, “what if it looked a little different?”</p>
       <p>It’s kooky. I love it.</p>
-      <p><em>Please don't buy this from an online megaretailer. Instead, buy it from an indie or neighborhood store with a good sci-fi section.</em></p>
+      <p><em>Please don't buy this from an online megaretailer. Instead, buy it from an independent bookstore with a good sci-fi section.</em></p>
     </div>
   </div>
 </div>
@@ -480,7 +480,7 @@
       <p>Edited by Bruce Sterling, Mirrorshades is an anthology that brings together many of those early voices from the original cyberpunk movement (Gibson, Cadigan, Sterling himself, and more). Each story experiments with different aspects of the genre, from body modification and AI, to street-level rebellion against sprawling corporations.</p>
       <p><strong>Why I like it:</strong> I feel like most entries in the cyberpunk subgenre (including games, TV, film, books…all of it) fall into one of two categories: a weak story leaning on the well-worn cyberpunk setting, or weak characters leaning on neon-noir tropes to move the plot forward. The pieces of media that are strong in all of the above are the standouts that became classics, and I don’t think there are a ton of those.</p>
       <p>That’s why I love anthologies, though—they don’t give stories enough time to wear their setting or genre tropes too thin, so they’re easier for me to buy into if they’re not perfect. The stories in Mirrorshades aren’t perfect, but they really capture the punk/rebellious sense that I imagine when I think of the genre. Sometimes short fiction is a great way to get back into a reading groove, too.</p>
-      <p><em>Please don't buy this from an online megaretailer. Instead, buy it from an indie or neighborhood store with a good sci-fi section.</em></p>
+      <p><em>Please don't buy this from an online megaretailer. Instead, buy it from an independent bookstore with a good sci-fi section.</em></p>
     </div>
   </div>
 </div>
@@ -494,7 +494,7 @@
       <p>Neuromancer follows Case, a high-tech, low-life hacker who’s just trying to survive after an angry former employer disabled the the tech within his central nervous system. After a shadowy US ex-military officer and a razorgirl approach him, Case agrees to join the crew for a high stakes heist in hopes of restoring his own tech once again.</p>
       <p><strong>Why I like it:</strong> What can you say about Neuromancer that hasn’t already been said? I’d love to have a more original take, but sincerely, this is my single favorite piece of cyberpunk media I’ve ever consumed. I know there’s a debate on what really kicked off the subgenre, but I don’t think there should be any debate on what its true staple is. To me, this is it.</p>
       <p>Neuromancer is exactly what I picture when I hear “cyberpunk,” and it delivers that world and the concepts we all love in sub-300 pages. How? If this book was written today, it would be 700 pages of world building and exposition. Case is such a good protagonist because he’s not overdone. He’s not avenging his father or some other bullshit, he’s just acting out of need. The same can be said for Molly, the same for Armitage and even Wintermute. When it matters, you get answers that make the plot hold weight. When it doesn’t, you don’t. That feels exceedingly rare in sci-fi today.</p>
-      <p><em>Please don't buy this from an online megaretailer. Instead, buy it from an indie or neighborhood store with a good sci-fi section.</em></p>
+      <p><em>Please don't buy this from an online megaretailer. Instead, buy it from an independent bookstore with a good sci-fi section.</em></p>
     </div>
   </div>
 </div>
@@ -505,9 +505,9 @@
   <small>Bruce Sterling</small>
   <div class="card-overlay">
     <div class="overlay-content">
-      <p>Bruce Sterling’s Schismatrix Plus follows Abelard Lindsay, a rogue political manipulator navigating the power struggles between two factions of posthumanity: the Shapers, who embrace genetic modification, and the Mechanists, who embrace cybernetics. Across decades and shifting alliances, Lindsay witnesses humanity’s evolution beyond Earth, beyond flesh, and beyond recognition.</p>
-      <p><strong>Why I like it:</strong> This is less a straightforward cyberpunk novel and more Sterling’s grand vision of where cyberpunk could go. It’s heady, dense, and philosophical — sometimes too much — but it pays off with sheer scope. If Gibson’s work feels street-level and neon-lit, Sterling’s feels orbital and ideological. Reading it is work, but the reward is one of the boldest expansions of the genre’s ideas: that cyberpunk doesn’t just belong to the city streets, but to the stars.</p>
-      <p><em>Please don't buy this from an online megaretailer. Instead, buy it from an indie or neighborhood store with a good sci-fi section.</em></p>
+      <p>Bruce Sterling’s Schismatrix Plus follows Abelard Lindsay, a rogue political manipulator navigating the power struggles between two factions of posthumanity: the Shapers, who embrace genetic modification, and the Mechanists, who embrace cybernetics. Across decades and shifting alliances, Lindsay witnesses humanity’s evolution beyond Earth, and beyond flesh.</p>
+      <p><strong>Why I like it:</strong> This one feels like it was Sterling’s grand vision of where cyberpunk could go given enough time. It’s dense and philosophical, sometimes a bit too much, but it pays off with sheer scope. Much of the genre is so grounded in that street-level crime way, but Schismatrix expands beyonmd that in a really cool wayo. Reading it is work, but the reward is getting to read one of the bolder expansions of the genre in this editor's eyes.</p>
+      <p><em>Please don't buy this from an online megaretailer. Instead, buy it from an independent bookstore with a good sci-fi section.</em></p>
     </div>
   </div>
 </div>
@@ -520,7 +520,7 @@
     <div class="overlay-content">
       <p>In Synners, Pat Cadigan envisions a future where people directly plug into entertainment and media streams, until the boundaries between human consciousness and digital content dissolve. What begins as an exploration of hackers and musicians colliding with new tech spirals into a crisis where society itself risks collapsing under information overload.</p>
       <p><strong>Why I like it:</strong> Synners feels chaotic, messy, and overwhelming — which is exactly why it works. Cadigan writes like she’s channeling the very overload she’s describing, and the result is dizzying in the best way. It’s uncanny how much this book predicts our current reality, where everyone is jacked in and overstimulated, blurring the line between online life and actual life. If Gibson defined the look of cyberpunk, Cadigan nailed the feel of living inside it.</p>
-      <p><em>Please don't buy this from an online megaretailer. Instead, buy it from an indie or neighborhood store with a good sci-fi section.</em></p>
+      <p><em>Please don't buy this from an online megaretailer. Instead, buy it from an independent bookstore with a good sci-fi section.</em></p>
     </div>
   </div>
 </div>
@@ -533,7 +533,7 @@
     <div class="overlay-content">
       <p>Set in a city where biotech has created a class of “Titans” — genetically modified elites who live far above everyone else — Titanium Noir follows a weary detective pulled into a murder case involving one of these giants. It's a classic noir setup, but dressed in futuristic biotech.</p>
       <p><strong>Why I like it:</strong> Titanium Noir is slick, moody, and effortlessly readable. It doesn’t try to reinvent the wheel — instead it merges the DNA of detective noir with cyberpunk biotech, and the combination works perfectly. The Titans are a fantastic metaphor for inequality, towering over the rest of society in both stature and power. It’s not the grimiest or the weirdest book on this list, but it’s one of the most fun to breeze through.</p>
-      <p><em>Please don't buy this from an online megaretailer. Instead, buy it from an indie or neighborhood store with a good sci-fi section.</em></p>
+      <p><em>Please don't buy this from an online megaretailer. Instead, buy it from an independent bookstore with a good sci-fi section.</em></p>
     </div>
   </div>
 </div>
