--- a/staffpicks.html
+++ b/staffpicks.html
@@ -518,8 +518,8 @@
   <small>Pat Cadigan</small>
   <div class="card-overlay">
     <div class="overlay-content">
-      <p>In Synners, Pat Cadigan envisions a future where people directly plug into entertainment and media streams, until the boundaries between human consciousness and digital content dissolve. What begins as an exploration of hackers and musicians colliding with new tech spirals into a crisis where society itself risks collapsing under information overload.</p>
-      <p><strong>Why I like it:</strong> Synners feels chaotic, messy, and overwhelming — which is exactly why it works. Cadigan writes like she’s channeling the very overload she’s describing, and the result is dizzying in the best way. It’s uncanny how much this book predicts our current reality, where everyone is jacked in and overstimulated, blurring the line between online life and actual life. If Gibson defined the look of cyberpunk, Cadigan nailed the feel of living inside it.</p>
+      <p>In Synners, Pat Cadigan envisions a future where people directly plug into entertainment and media streams until the boundaries between human consciousness and digital content dissolve. What begins as an exploration of hackers and musicians colliding with new tech spirals into a crisis where society itself risks collapsing under information overload.</p>
+      <p><strong>Why I like it:</strong> Synners is pretty chaotic and a bit overwhelming, but in a way that fits into the genre quite well for whatever reason. Cadigan almost writes like she’s channeling the very overload she’s describing. Reading this book a decade ago, it felt dystopian. Reading it today, it felt like a pretty apt piece of commentary, where everyone is jacked in and overstimulated, blurring the line between online life and actual life. Cadigan nailed the feel of living inside the idea this editor had of cyberpunk when they were a kid.</p>
       <p><em>Please don't buy this from an online megaretailer. Instead, buy it from an independent bookstore with a good sci-fi section.</em></p>
     </div>
   </div>
