--- a/staffpicks.html
+++ b/staffpicks.html
@@ -531,8 +531,8 @@
   <small>Nick Harkaway</small>
   <div class="card-overlay">
     <div class="overlay-content">
-      <p>Set in a city where biotech has created a class of “Titans” — genetically modified elites who live far above everyone else — Titanium Noir follows a weary detective pulled into a murder case involving one of these giants. It's a classic noir setup, but dressed in futuristic biotech.</p>
-      <p><strong>Why I like it:</strong> Titanium Noir is slick, moody, and effortlessly readable. It doesn’t try to reinvent the wheel — instead it merges the DNA of detective noir with cyberpunk biotech, and the combination works perfectly. The Titans are a fantastic metaphor for inequality, towering over the rest of society in both stature and power. It’s not the grimiest or the weirdest book on this list, but it’s one of the most fun to breeze through.</p>
+      <p>Set in a city where biotech has created a class of “Titans” — genetically modified elites who live far above everyone else — Titanium Noir follows a weary detective pulled into a murder case involving one of these giants. It's a classic noir setup placed in a cyberpunk future.</p>
+      <p><strong>Why I like it:</strong> Titanium Noir is effortlessly readable because it's quite simple (compliment). It doesn’t try to reinvent the wheel, but instead merges noir tropes with sci-fi tropes, each of which are quite well done. The class-struggle metaphors that come along with the concept of titans were quite reminiscent of those found in Altered carbon (again, compliment). This editor breezed through this book and enjoyed it the whole time.</p>
       <p><em>Please don't buy this from an online megaretailer. Instead, buy it from an independent bookstore with a good sci-fi section.</em></p>
     </div>
   </div>
