--- a/staffpicks.html
+++ b/staffpicks.html
@@ -376,8 +376,8 @@
   <small>One More Level</small>
   <div class="card-overlay">
     <div class="overlay-content">
-      <p>Ghostrunner casts you as a cybernetic ninja ascending a massive tower city, armed with nothing but a katana, lightning reflexes, and a grappling hook. The gameplay is fast, punishing, and exhilarating — you wall-run, dash, and slice through enemies in one-hit-kill encounters that demand perfection.</p>
-      <p><strong>Why I like it:</strong> Ghostrunner is pure cyberpunk distilled into movement and combat. Every death is a lesson, every retry a step closer to flowing through a level like you’re wired into the Matrix. The world is bleak and brutal, but it’s the feel of Ghostrunner that sticks with you — the speed, the precision, the rhythm. It makes you feel unstoppable for those few seconds before you inevitably die again.</p>
+      <p>Ghostrunner casts you as a cybernetic ninja ascending a massive tower city, armed with nothing but a katana, lightning reflexes, and a grappling hook.</p>
+      <p><strong>Why I like it:</strong> You go so fast! You kill seven people with a cybernetic sword and die! You go so fast again! Even coming from someone who isn't a huge fan of the first-person platforming speed games, this one is so well made and so specifically in the genre that this editor loved it.</p>
       <p class="steam-link">
         <a href="https://store.steampowered.com/app/1139900/Ghostrunner/" target="_blank" rel="noopener noreferrer">Check it out on Steam.</a>
       </p>
