--- a/staffpicks.html
+++ b/staffpicks.html
@@ -391,8 +391,8 @@
   <small>Rare</small>
   <div class="card-overlay">
     <div class="overlay-content">
-      <p>This remaster of the original N64 classic follows Joanna Dark, a secret agent caught in a conspiracy involving corporations, aliens, and cutting-edge weapons. It keeps the core story and design intact while polishing visuals and controls for a modern audience.</p>
-      <p><strong>Why I like it:</strong> Perfect Dark still feels like lightning in a bottle. Joanna Dark is one of the genre’s great protagonists — cool, capable, and stylish without needing to be over-explained. The missions are inventive, the weapons are wild, and even decades later the game retains its charm. It’s not as slick as modern shooters, but as a bridge between old-school design and cyberpunk aesthetic, it’s iconic.</p>
+      <p>This remaster of the original N64 classic follows Joanna Dark, a secret agent caught in a conspiracy involving corporations, aliens, and cutting-edge weapons. A spiritual successor to GoldenEye 007 (yes, that's real), Perfect Dark was the sci-fi twist on early first-person shooters.</p>
+      <p><strong>Why I like it:</strong> That's right, I'm nostalgic! Perfect Dark (the 2010 remake for Xbox 360) is ridiculous and awesome. It's so plot thin and stupid, just as it should be. What a moment in time.</p>
       <p class="steam-link">
         <a href="https://www.xbox.com/en-US/games/store/perfect-dark/C0SWGV4560W1/0001" target="_blank" rel="noopener noreferrer">Check it out here.</a>
       </p>
