--- a/staffpicks.html
+++ b/staffpicks.html
@@ -301,7 +301,7 @@
       <p>In the beginning, I thought what a cool concept and nice vibe. By the end, I found myself saying it was one of my favorite games of all time because of the depth that every single character has, despite being the same character (kind of). I enjoy the characters and the world of 1000xRESIST as much or more as those from any movie or book that I’ve ever consumed.</p>
       <p>I will admit that 1000xRESIST is cyberpunk-adjacent rather than falling squarely within the genre, but it executes on its ideas so spectacularly that it still garners mention here. Plus, it’s my website, so I can write whatever I want.</p>
       <p class="steam-link">
-        <a href="https://store.steampowered.com/app/464060/RUINER/" target="_blank" rel="noopener noreferrer">Check it out on Steam.</a>
+        <a href="https://store.steampowered.com/app/1675830/1000xRESIST/" target="_blank" rel="noopener noreferrer">Check it out on Steam.</a>
       </p>
     </div>
   </div>
@@ -406,8 +406,8 @@
   <small>Reikon Games</small>
   <div class="card-overlay">
     <div class="overlay-content">
-      <p>Ruiner drops you into a grim, violent cityscape as a mute helmeted antihero on a mission to rescue his kidnapped brother. The gameplay is a mix of fast-paced melee and gun combat, all wrapped in a pounding synth soundtrack and blood-red visuals.</p>
-      <p><strong>Why I like it:</strong> Ruiner is cyberpunk style turned up to eleven. The story is minimal, the characters are archetypal, but the vibe is immaculate — twitchy combat, oppressive atmosphere, and a soundtrack that rattles your bones. It’s the kind of game you play less for the plot and more for the feeling of being dropped into a high-speed cyberpunk fever dream.</p>
+      <p>Ruiner is a fast-paced twin-stick shooter where you play as a helmeted antihero on a mission to rescue his kidnapped brother. The gameplay is a mix of fast-paced melee and gun combat, all wrapped in a pounding synth soundtrack and blood-red visuals.</p>
+      <p><strong>Why I like it:</strong> Ruiner is grim cyberpunk turned up as hish as the dial goes. The story is minimal, the characters are archetypal, but the vibe is fits perfectly within the genre, just with more red than neon. It’s the kind of game you play less for the plot and more for the feeling of being a killing machine. Super well made game.</p>
       <p class="steam-link">
         <a href="https://store.steampowered.com/app/464060/RUINER/" target="_blank" rel="noopener noreferrer">Check it out on Steam.</a>
       </p>
