--- a/staffpicks.html
+++ b/staffpicks.html
@@ -546,7 +546,7 @@
   <div class="card-overlay">
     <div class="overlay-content">
       <p>Set thirty years after the original, Blade Runner 2049 follows K, a replicant blade runner who uncovers a secret that could change the balance between humans and replicants forever. Along the way, he confronts questions of identity, memory, and what it means to be real.</p>
-      <p><strong>Why I like it:</strong> Making a sequel to Blade Runner should have been impossible, but Villeneuve pulled it off. The film doesn’t just copy the original — it expands on it, slows it down, and makes it even more meditative. It’s visually breathtaking, emotionally resonant, and thematically richer than most sci-fi made in the last twenty years. If the first Blade Runner defined the look of cyberpunk, this one proves the genre can grow older, slower, and deeper.</p>
+      <p><strong>Why I like it:</strong> Making a sequel to Blade Runner was an incredibly tall order, but Villeneuve pulled it off. After rewatching both the original and 2049 recently, this editor strongly prefers Villeneuve's entry. Today, Ridley Scott's original Blade Runner feels hamstrung by the time periuod it lives in, in that its proposed future doesn't feel so far off. 2049, however, operates with a much different degree of scale (as do all of Villeneuve's movies). The tech is incredible, the setting is bleak, and Ryan Gosling is as me as he's ever been. Without a doubt, this is one of the best pieces of media in the cyberpunk genre.</p>
     </div>
   </div>
 </div>
