--- a/staffpicks.html
+++ b/staffpicks.html
@@ -557,8 +557,8 @@
   <small>Studio Trigger / CD Projekt</small>
   <div class="card-overlay">
     <div class="overlay-content">
-      <p>Set in the same world as Cyberpunk 2077, Edgerunners tells the story of David Martinez, a street kid who implants illegal tech into his body and spirals into the mercenary life of Night City. Over ten episodes, he and his crew rise, fall, and burn brightly against the corporate machine.</p>
-      <p><strong>Why I like it:</strong> Edgerunners works because it knows exactly how short its run is. The characters are instantly lovable, the action is frantic, and the tragedy is baked in from the start. By the final episodes, it doesn’t matter that you know where it’s heading — it still guts you. That mix of energy, style, and heartbreak is what makes this not just a good anime, but one of the best cyberpunk stories of the last decade.</p>
+      <p>Set in the same world as Cyberpunk 2077, Edgerunners tells the story of David Martinez, a street kid who implants illegal tech into his body and spirals into the mercenary life of Night City. Over ten episodes, he and his crew rise and fall in their fight against the corporate machine.</p>
+      <p><strong>Why I like it:</strong> I was very skeptical to watch a cyberpunk 2077 TV show, which felt like it could've just been a cash grab, but wow I love this show. Edgerunners works because it knows exactly how short its run is. The characters' motivations are clear fast, and it doesn't take long to get to some good ole anime violence. Upon seeing the first trailer, it was clear that Studio Trigger put somethiong together that was highly stylized and gorgeous. It wasn't clear, however, how emotional this one would actually be. Camp for sure, but still well written.</p>
     </div>
   </div>
 </div>
