--- a/staffpicks.html
+++ b/staffpicks.html
@@ -569,8 +569,8 @@
   <small>Mamoru Oshii</small>
   <div class="card-overlay">
     <div class="overlay-content">
-      <p>Major Motoko Kusanagi, a cyborg working for Section 9, hunts a mysterious hacker known as the Puppet Master. What begins as a political thriller quickly evolves into a meditation on identity, consciousness, and the nature of the soul in a cybernetic body.</p>
-      <p><strong>Why I like it:</strong> Few films have the guts to slow down as much as Ghost in the Shell. Between bursts of action, Oshii lingers on cityscapes and quiet moments, making the world feel alive and alien. The questions it asks — about selfhood, technology, and freedom — are still relevant today, and the film’s visual language shaped not just anime but Hollywood sci-fi for decades.</p>
+      <p>Motoko Kusanagi, a cyborg working for Section 9, hunts a mysterious hacker known as the Puppet Master.</p>
+      <p><strong>Why I like it:</strong> This movie is painted as a political thriller, but is really a meditation on identity, consciousness, and the nature of the soul in a cybernetic body. Like many 90s sci-fi anime, Ghost in the Shell's plot follows some murky and poorly-explained factions or governments or organizations or whatever. But who cares? If this story hinged on its political intrigue, it would fail. But it doesn't - it hinges on iconic frames that portrait Kusanagi in front of a beautifukl and grim skyline while she questions what it really means to live. This movie is beautiful, UNLESS you watch it in English. DO NOT WATCH THIS MOVIE IN ENGLISH!</p>
     </div>
   </div>
 </div>
