--- a/staffpicks.html
+++ b/staffpicks.html
@@ -570,7 +570,7 @@
   <div class="card-overlay">
     <div class="overlay-content">
       <p>Motoko Kusanagi, a cyborg working for Section 9, hunts a mysterious hacker known as the Puppet Master.</p>
-      <p><strong>Why I like it:</strong> This movie is painted as a political thriller, but is really a meditation on identity, consciousness, and the nature of the soul in a cybernetic body. Like many 90s sci-fi anime, Ghost in the Shell's plot follows some murky and poorly-explained factions or governments or organizations or whatever. But who cares? If this story hinged on its political intrigue, it would fail. But it doesn't - it hinges on iconic frames that portrait Kusanagi in front of a beautifukl and grim skyline while she questions what it really means to live. This movie is beautiful, UNLESS you watch it in English. DO NOT WATCH THIS MOVIE IN ENGLISH!</p>
+      <p><strong>Why I like it:</strong> This movie is painted as a political thriller, but is really a meditation on identity, consciousness, and the nature of the soul in a cybernetic body. Like many 90s sci-fi anime, Ghost in the Shell's plot follows some murky and poorly-explained factions or governments or organizations or whatever. But who cares? If this story hinged on its political intrigue, it would fail. But it doesn't - it hinges on iconic frames that portrait Kusanagi in front of a beautiful and grim skyline while she questions what it really means to live. This movie is beautiful, UNLESS you watch it in English. DO NOT WATCH THIS MOVIE IN ENGLISH!</p>
     </div>
   </div>
 </div>
