--- a/staffpicks.html
+++ b/staffpicks.html
@@ -581,8 +581,8 @@
   <small>Kenji Kamiyama / Production I.G.</small>
   <div class="card-overlay">
     <div class="overlay-content">
-      <p>This anime series expands the Ghost in the Shell universe, following Major Kusanagi and her Section 9 team through a mix of episodic cases and overarching plots like the Laughing Man. Each story blends cybercrime, political intrigue, and philosophical questions about the wired world.</p>
-      <p><strong>Why I like it:</strong> SAC strikes an incredible balance between procedural action and deep thematic storytelling. Some episodes are self-contained thrillers, others build into sweeping arcs, but all of them reinforce just how layered and complex this universe can be. Major Kusanagi shines as one of the greatest cyberpunk protagonists, and the series proves cyberpunk works just as well on TV as it does in film or books.</p>
+      <p>This anime series expands the Ghost in the Shell universe, following Major Kusanagi and her Section 9 team through a mix of episodic cases and overarching plots.</p>
+      <p><strong>Why I like it:</strong> SAC watches like a cyberpunk Cowboy Bepop to this editor in the way that the world is laid out for you, but the only throughline to the different plots and philosophies taking place is the characters that you know. This isn't a show that changed television forever, but it's more than just a derivative of it's namesake. If you like Ghost in the Shell and want more of it, look no further.</p>
     </div>
   </div>
 </div>
