--- a/staffpicks.html
+++ b/staffpicks.html
@@ -594,8 +594,9 @@
   <small>The_Future_is_Now</small>
   <div class="card-overlay">
     <div class="overlay-content">
-      <p>Neon_Rising is a cyberpunk art book that mixes narrative with visuals, presenting gritty, neon-drenched cities populated with outlaws, mercenaries, and dreamers. The art alone tells stories, but there’s just enough lore to make the world feel alive.</p>
-      <p><strong>Why I like it:</strong> Sometimes you just want to look at cyberpunk, and this book scratches that itch. Every page drips with detail — rain-slicked streets, shadowy figures, glowing signage. The snippets of story make it more than just pretty pictures, though; they suggest a living, breathing world behind the art. It’s the perfect coffee table book for anyone who wants to get lost in neon.</p>
+      <p>Neon_Rising is a cyberpunk art book that mixes narrative with wordless visuals. The art alone tells stories, but there’s just enough lore to make the world feel alive.</p>
+      <p><strong>Why I like it:</strong> Sometimes you just want to look at cyberpunk, and this book scratches that itch. Artist Josan Gonzalez, whose work you already know from iconic new covers for Gibson's Sprawl Trilogy, put together this incredibly detailed 200+ page art page that shows a loose narrative of characters moving through a cyberpunk world. Without exaggerating, this is the single visual book of any variety that I have fluipped through most. It's worth every penny if you like this stuff.</p>
+      <a href="https://citadel9.com/products/the-future-is-now_neon-rising" target="_blank" rel="noopener noreferrer">Check it out on the artist's website.</a>
     </div>
   </div>
 </div>
