--- a/stories.html
+++ b/stories.html
@@ -201,7 +201,7 @@
         <!-- Everything from the 4th card onward starts hidden -->
         <a href="https://bowliopia.github.io/burnline/stories/story-4.html" class="card-link story-card is-hidden">
           <div class="card">
-            <img src="Cyberpunk Guy.png" alt="Story artwork" loading="lazy">
+            <img src="Marathon Art 2.png" alt="Story artwork" loading="lazy">
             <h3>[Story Title]</h3>
             <p class="story-excerpt">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed facilisis tortor non justo ultricies.</p>
             <div class="story-meta">by [Author's Name] • 8 min read</div>
@@ -237,7 +237,7 @@
 
         <a href="https://bowliopia.github.io/burnline/stories/story-8.html" class="card-link story-card is-hidden">
           <div class="card">
-            <img src="Cyberpunk Guy.png" alt="Story artwork" loading="lazy">
+            <img src="Marathon Art 2.png" alt="Story artwork" loading="lazy">
             <h3>[Story Title]</h3>
             <p class="story-excerpt">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur a mi sit amet mi dapibus.</p>
             <div class="story-meta">by [Author's Name] • 12 min read</div>
